[package]

name = "artifact"
description = "A logging library which allows settings to be specified through cargo features."
version = "0.0.7"
authors = ["Brandon Sanderson <singingboyo@gmail.com>"]
repository = "https://github.com/brandonson/artifact-rs"
keywords = ["log", "logging"]
license = "MIT"
documentation = "http://brandonson.github.io/artifact-rs"
readme = "README.md"

exclude = ["bin/*.rs"]

[dependencies]

lazy_static = "*"

[features]

no-failure-logs = []
disable         = []

[[bin]]

name = "basic_stdout_log"
doc = false
test = false

[[bin]]

name = "file_log"
doc = false
test = false

[[bin]]
name = "level_loggers"
doc = false
test = false
