[package]

name = "artifact"
description = "A logging library which allows settings to be specified through cargo features."
version = "0.2.4"
authors = ["Brandon Sanderson <singingboyo@gmail.com>"]
repository = "https://github.com/brandonson/artifact-rs"
keywords = ["log", "logging"]
license = "MIT"
documentation = "http://brandonson.github.io/artifact-rs"
readme = "README.md"

exclude = ["bin/*.rs"]

[dependencies]

lazy_static = "0.1.*"

[dependencies.time]
version = "0.1.*"
optional = true

[dependencies.log]
version = "0.3.*"
optional = true

[features]

no-failure-logs = []
default = ["time"]

[[bin]]

name = "basic_stdout_log"
doc = false
test = false


[[bin]]

name = "logcrate_use"
doc = false
test = false

[[bin]]

name = "file_log"
doc = false
test = false

[[bin]]
name = "level_loggers"
doc = false
test = false

[[bin]]
name = "multi_logger"
doc = false
test = false

[[bin]]
name = "disable"
doc = false
test = false

[[bin]]
name = "redirect"
doc = false
test = false
